# mate-conf

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.in
backends/: Makefile.am
defaults/: Makefile.am
distro/archlinux/: PKGBUILD
distro/ubuntu/: build
examples/: Makefile.am
gsettings/: Makefile.am  mateconf-gsettings-data-convert.1  mateconf-gsettings-data-convert.c  mateconf-gsettings-data-convert.desktop  mateconf-gsettings-data-convert.xml  mateconf-gsettings-schema-convert.1  mateconf-gsettings-schema-convert.xml  mateconfsettingsbackend-module.c  mateconfsettingsbackend.c  mateconfsettingsbackend.h
mateconf/: Makefile.am  mateconf-internals.c
po/: ChangeLog  LINGUAS  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  es_CL.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gnome-copyrights.txt  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  (+48 more)
tests/: Makefile.am
